[package]
name = "blink_teste"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "=1.0.0"
nb = "1"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-halt = "0.2.0"
ili9341 = "0.5.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-sdmmc = "0.4.0"
# ili9341 = "0.6.0"
# display-interface-spi = "0.5.0"
# embedded-graphics = "0.8.1"

[dependencies.stm32f1xx-hal]
version = "0.10.0"

#remova '#' em 'features' selecionar a placa correta

#STM32F103C8xx
features = ["rt", "stm32f103", "medium"]

#STM32F103C6xx
#features = ["rt", "stm32f103"]
